    started/restarted the firewall. Previously, only /etc/shorewall
    (/etc/shorewall6) was searched.

2)  FORMAT-2 actions may now specify default parameter values using the
    DEFAULTS directive.

    	DEFAULTS <def1>,<def2>,...

    Where <def1> is the default value for the first parameter, <def2>
    is the default value for the second parameter and so on. To specify
    an empty default, use '-'.

    The DEFAULTS directive also determines the maximum number of
    parameters that an action may have. If more parameters are passed
    than have default values, an error message is issued.

3)  Parameterized macros may now specify a default parameter value
    using the DEFAULT directive.

	DEFAULT <default>

    Example macro.Foo -- by default, accepts connections on ficticous
    	    	      	 tcp port 'foo'.

    	DEFAULT ACCEPT
	PARAM	-	-	tcp	foo

4)  The standard Drop and Reject actions are now parameterized. Each 
    has 5 parameters:

    1) Pass 'audit' if you want all ACCEPTs, DROPs and REJECTs audited.
       Pass '-' otherwise.

    2) The action to be applied to Auth requests: 

       	      FIRST PARAMETER           DEFAULT
  
  	      -				REJECT
	      audit			A_REJECT

    3) The action to be applied to SMB traffic. The default depends on
       the action and its first parameter:

              ACTION	 FIRST PARAMETER		DEFAULT

	      Reject	 -				REJECT
	      Drop	 -				DROP
	      Reject	 audit				A_REJECT
	      Drop	 audit				A_DROP

    4)  The action to be applied to accepted ICMP packets.

       	      FIRST PARAMETER           DEFAULT

	      -	    			ACCEPT
	      audit			A_ACCEPT

    5)  The action to be applied to UPnP (udp port 1900) and late DNS
    	replies (udp source port 53)

       	      FIRST PARAMETER           DEFAULT

	      -	    			DROP
	      audit			A_DROP

    The parameters can be passed in the POLICY column of the policy
    file.

    Examples:

	SOURCE	DEST	POLICY
	net	all	DROP:Drop(audit):audit  #Same as 