@@ -372,10 +372,7 @@ REDIRECT       net     -       tcp     80      -       1.2.3.4</programlisting>
 
       <para>Example: ACTION(REDIRECT,-,info)</para>
 
-      <para>In the above example, $2 would expand to nothing.</para>
-
-      <para>If you want to make '-' a parameter value, use '--' (e.g.,
-      ACTION(REDIRECT,--.info)).</para>
+      <para>In the above example, $2 would expand to '-'.</para>
 
       <para>Beginning with Shorewall 4.4.21, you can specify the default
       values of your FORMAT-2 actions:</para>
