@@ -65,7 +65,9 @@ VI.   PROBLEMS CORRECTED AND NEW FEATURES IN PRIOR RELEASES
 
     Where <def1> is the default value for the first parameter, <def2>
     is the default value for the second parameter and so on. To specify
-    an empty default, use '-'.
+    an empty default, use '-'. Note that the corresponding parameter
+    variable ($n) will still expand to '-' but will be treated as empty
+    by the builtin actions such as dropInvalid.
 
     The DEFAULTS directive also determines the maximum number of
     parameters that an action may have. If more parameters are passed
